# handsOnDE_2

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
consumers/: kafka_to_lake.py
dags/: ingest_reference_data.py
producer/: config_constants.py  demandmodel.py  error_injection.py  order_event_generator.py  producer_README.md  reference_data_generator.py  rider_event_generator.py  run_stream.py  synthetic_data_generator.py  visualize.py
