[project]
name = "demand-model-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "GentleClash",email = "ayushbajpai016@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
